<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>453</width>
    <height>552</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QPlainTextEdit" name="room_number_input">
   <property name="geometry">
    <rect>
     <x>130</x>
     <y>230</y>
     <width>301</width>
     <height>41</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
   <property name="cursorWidth">
    <number>5</number>
   </property>
  </widget>
  <widget class="QLabel" name="student_id_label">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>290</y>
     <width>101</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>學號</string>
   </property>
  </widget>
  <widget class="QPushButton" name="join_room_button">
   <property name="geometry">
    <rect>
     <x>170</x>
     <y>435</y>
     <width>111</width>
     <height>51</height>
    </rect>
   </property>
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
   <property name="text">
    <string>加入教室</string>
   </property>
  </widget>
  <widget class="QPlainTextEdit" name="student_id_input">
   <property name="geometry">
    <rect>
     <x>130</x>
     <y>285</y>
     <width>301</width>
     <height>41</height>
    </rect>
   </property>
   <property name="cursorWidth">
    <number>5</number>
   </property>
  </widget>
  <widget class="QLabel" name="room_number_label">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>240</y>
     <width>101</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>教室代碼</string>
   </property>
  </widget>
  <widget class="QLabel" name="student_name_label">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>345</y>
     <width>101</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>學生姓名</string>
   </property>
  </widget>
  <widget class="QPlainTextEdit" name="student_name_input">
   <property name="geometry">
    <rect>
     <x>130</x>
     <y>340</y>
     <width>301</width>
     <height>41</height>
    </rect>
   </property>
   <property name="cursorWidth">
    <number>5</number>
   </property>
  </widget>
  <widget class="QLabel" name="label_title">
   <property name="geometry">
    <rect>
     <x>133</x>
     <y>150</y>
     <width>191</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>線上同步教學系統</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLabel" name="label_img">
   <property name="geometry">
    <rect>
     <x>152</x>
     <y>10</y>
     <width>151</width>
     <height>131</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../img/video-conference-128.png</pixmap>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
